@@ -1,8 +1,8 @@
 Description: Floppy drive volume
-Default: 20
+Default: 67
 Example: 0
 Type: integer
 Range: 0 - 100
 
 Set volume to 0 to disable floppy drive sounds. Max volume is 100.
-The default value is 20.
+The default value is 67.
